imports/ui/pomodoroTimer/pomodoroTimer.scss
@import "../../../client/themes/theme-default";
@import "../../../client/themes/theme-contrast";
@import "../main/main.scss";

.pomodoroTimer {
  .pomArc,
  .breakArc {
    stroke-width: 8px;
    fill: none;
  }

  .progressArc {
    fill: none;
    stroke-width: 2px;
  }

  .pomodoroClock {
    cursor: pointer;
    background-image: url("/img/pomodoro/pomodoro.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 80% 80%;
    -webkit-filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.25));
    filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.25));
  }

  .numSlider {
    margin-left: 5% !important;
    width: 71% !important;
    position: relative !important;
    display: inline-block !important;
    vertical-align: middle !important;
  }

  .quantity {
    margin-bottom: 10px !important;
    display: inline-block !important;
    width: 17% !important;
  }

  #input {
    text-align: center;
  }

  .pomodoroInstructions {
    margin: 0 !important;
    padding: 0 !important;
    font-size: 18px;
  }
}

.modalContent-noButtons {
  padding: 0 5%;
}

.pomodoroBackground {
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  background-image: url('/img/pomodoro.png');
}

.pomodoroHighlight {
  font-weight: bold;
}


#pomodoroTimerNormalContainer {
  height: 150px;
  width: 150px;

  position: absolute;
  bottom: 9rem;
  left: 1rem;

  @media (max-width: 768px) {
    left: 3vw;
  }
  @media (min-width: 950px) {
    height: 200px;
    width: 200px;
  }
  text-align: center;
  .pomodoroTimer {
    margin: auto;
  }
}

//welcome page

#pomodoroTimerWordcloudContainer {
  display: none;
  @media (max-width: 767px) {
    display: block;
  }
  text-align: center;
  .pomodoroTimer {
    margin: auto;
  }
}

.pomodoroInstructions {
  @media (max-height: 520px) {
    display: none;
  }
  @media (min-width: 702px) and (max-height: 700px) {
    @media (min-width: 1200px) and (max-height: 700px) {
      display: none;
    }
  }
}

// setting pomodoro in focus on start
#pomodoroTimerOverlay {
  position: absolute;
  width: 100%;
  height: 100%;
  text-align: center;
  background-color: #4A5C66 !important;
  z-index: 1000;
  display: none;
  overflow: hidden;
  .pomodoroTimer {
    margin: auto;
  }
  .pomodoroClock {
    margin-top: 0 !important;
  }
}

#pomodoroTimerOverlay .pomodoroTimer .pomodoroInstructions {
  display: none !important;
}

#cancelPomodoroBtn {
  float: left;
}

